--- a/Modul 9/peminjaman.css
+++ b/Modul 9/peminjaman.css
@@ -7,25 +7,35 @@
 
 body {
     display: flex;
-    justify-content: center;
+    justify-content:space-evenly;
     align-items: center;
     min-height: 100vh;
-    background-color: rgb(213, 206, 163);
+    background-color: rgb(255, 237, 237);
 }
 
 .container {
     width: 100%;
     display: flex;
     max-width: 500px;
-    background: rgb(109, 152, 134);
+    background: rgb(48, 170, 241);
     border-radius: 15px;
     box-shadow: 0 10px 15px rgba(0, 0, 0, 0.1);
 }
 
+.hasil {
+    display: flex;  
+    flex-direction: column;
+    align-items: center;
+    justify-content: center; 
+    padding: 100px;
+    background: rgb(48, 170, 241);
+    border-radius: 15px;  
+    box-shadow: 0 10px 15px rgba(0, 0, 0, 0.1);
+  }
 .form{
     width: 100%;
     max-width: 500px;
-    background: rgb(109, 152, 134);
+    background: rgb(48, 170, 241);
     border-radius: 15px;
     box-shadow: 0 10px 15px rgba(0, 0, 0, 0.1);
 }
